# Experiments

./: .gitignore  Gitコマンド.md  README.md  Yaml.md  docker.md  dockerコマンド.md  poetry.md  poetryとpyenv.md
MLflow/: ToDo.md  docker-compose.yaml  postgresの操作.md
MLflow/jupyter/: pyproject.toml  requirements.txt
MLflow/jupyter/work/: ElasticNet_Regression1.ipynb  ElasticNet_Regression2.ipynb
MLflow/mlflow/: Dockerfile
MLsystem/experiment1/dataset/: area.csv  create_dataset.py  pyproject.toml
MLsystem/experiment1/ml/src/: pyproject.toml
MLsystem/experiment1/ml/src/jobs/: 01_ingest.py  10_preprocess.py
gRPC/: docker-compose.yaml  docker-composeのログ.md
gRPC/client/: Dockerfile  client.py
gRPC/proto/: __init__.py  helloworld.proto  pythonのgRPCの注意点.md
gRPC/server/: Dockerfile  server.py
onnx_runtime/jupyter/: pyproject.toml  requirements.txt
onnx_runtime/jupyter/work/: ONNXによる推論処理.ipynb  Rasnet.ipynb  Transformerの解剖.ipynb  extract_resnet50_onnx.py
onnx_runtime/jupyter/work/ml/: prediction.py
onnx_runtime_server/experiment1/: Dockerfile.server  docker-compose.yaml  メモ.md
onnx_runtime_server/experiment1/server/: xgb_classifier.py
onnx_runtime_server/experiment2/: Dockerfile.client  Dockerfile.server  docker-compose.yaml
onnx_runtime_server/experiment2/client/: pyproject.toml  requests_grpc.py  requests_http.py  requirements.txt
onnx_runtime_server/experiment2/server/: onnx_runtime_server_entrypoint.sh  pyproject.toml  requirements.txt  sklearn_elasticnet.py
onnx_runtime_server/experiment2/server/inference_test/: onnx_model_inference.py  test.py
onnx_runtime_server/experiment2/server/models/: elasticnet.joblib  elasticnet.onnx
pytorch/: docker-compose.yaml
pytorch/jupyter/: Dockerfile  pyproject.toml  requirements.txt
pytorch/jupyter/work/notebooks/: ch00_intro.ipynb  ch01_python.ipynb  ch02_pytorch.ipynb  ch02_pytorch_appendix.ipynb  ch03_first_ml.ipynb  ch04_model_dev.ipynb  ch05_regression.ipynb  ch08_dl.ipynb  (+6 more)
scikit-learn/pipeline/jupyter/: Dockerfile  pyproject.toml  requirements.txt
scikit-learn/pipeline/jupyter/work/: 01_単純なパイプラインの構築をやってみる.ipynb  02_自作関数をFunctionTransformerで変換器にする.ipynb  03_CustomTransformerを自作する.ipynb  ex1.ipynb
scikit-learn/pipeline/jupyter/work/.ipynb_checkpoints/: ex1-checkpoint.ipynb
(+9 files in other folders)
