[tool.poetry]
name = "eval-onnxruntime"
version = "0.1.0"
description = ""
authors = ["YuyaK-0913 <kuniyu.0913@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
onnx = "^1.16.2"
pandas = "^2.2.3"
numpy = "^2.1.1"
torch = "^2.4.1"
torchvision = "^0.19.1"
scikit-learn = "^1.5.2"
pydantic = "^2.9.2"
onnxruntime = "^1.19.2"
skl2onnx = "^1.17.0"
onnxmltools = "^1.12.0"
lightgbm = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
